--- a/web/app/components/main_sidebar/large_event_component.html.erb
+++ b/web/app/components/main_sidebar/large_event_component.html.erb
@@ -29,44 +29,35 @@
 						<div class="aspect-ratio-16/9"></div>
 						<img src="<%= @event.image[:original].try { |image| image.url(public: true) } %>" alt="<%= @event.name %>" class="object-cover object-center absolute top-0 left-0 w-full min-w-full h-full bg-gray-50">
 					</div>
-					<div class="">
-						<div class="flex items-center py-2 px-3 space-x-2 w-full text-sm font-medium text-gray-500 bg-gray-100 cursor-pointer">
-							<a href="<%= @event.source_url %>" target="_blank" class="flex flex-1 justify-center items-center py-2 space-x-2 bg-white rounded shadow-sm select-none hover:bg-gray-300 hover:text-gray-800 hover:shadow-none group">
-								<div>Abrir no facebook</div>
-								<svg class="h-4 text-gray-400 fill-current group-hover:text-gray-700" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-									<path d="M16 16H2V2H9V0H2C0.89 0 0 0.9 0 2V16C0 17.1 0.89 18 2 18H16C17.1 18 18 17.1 18 16V9H16V16ZM11 0V2H14.59L4.76 11.83L6.17 13.24L16 3.41V7H18V0H11Z"/>
+					<div class="-mt-6 relative z-20 flex items-center py-2 px-3 space-x-2">
+						<a href="<%= @event.source_url %>" rel="nofollow" target="_blank" class="flex flex-1 justify-center items-center py-2 space-x-2 rounded-full select-none bg-gray-300 text-gray-800 hover:bg-brand-200 hover:text-brand-600 group">
+							<div class="font-semibold">Abrir no facebook</div>
+							<svg class="h-5 stroke-current text-gray-700 group-hover:text-brand-600" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"/>
+							</svg>
+						</a>
+						<% if @event.ticket_url %>
+							<a href="<%= @event.ticket_url %>" rel="nofollow" target="_blank" class="flex flex-1 justify-center items-center py-2 space-x-2 rounded-full select-none bg-gray-300 text-gray-800 hover:bg-brand-200 hover:text-brand-600 group">
+								<div class="font-semibold">Ingressos</div>
+								<svg class="h-5 stroke-current text-gray-700 group-hover:text-brand-600" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 5v2m0 4v2m0 4v2M5 5a2 2 0 00-2 2v3a2 2 0 110 4v3a2 2 0 002 2h14a2 2 0 002-2v-3a2 2 0 110-4V7a2 2 0 00-2-2H5z"/>
 								</svg>
 							</a>
-							<div class="flex flex-1 justify-center items-center py-2 space-x-2 bg-white rounded shadow-sm cursor-pointer select-none hover:bg-gray-300 hover:text-gray-800 hover:shadow-none group"
-									 data-controller="share-button"
-									 data-share-button-text="<%= strip_tags(helpers.limit_description_size(@event.description, 160)) %>"
-									 data-share-button-title="<%= @event.name %>"
-									 data-share-button-url="<%= event_url(@event, format: :html) %>"
-									 data-action="click->share-button#share">
-								<input class="absolute opacity-0" style="bottom: -30px" data-share-button-target="input" type="text" value="<%= event_url(@event, format: :html) %>">
-								<div>Compartilhar</div>
-								<svg class="h-4 text-gray-400 fill-current group-hover:text-gray-700" viewBox="0 0 18 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-									<path d="M15 14.08C14.24 14.08 13.56 14.38 13.04 14.85L5.91 10.7C5.96 10.47 6 10.24 6 10C6 9.76 5.96 9.53 5.91 9.3L12.96 5.19C13.5 5.69 14.21 6 15 6C16.66 6 18 4.66 18 3C18 1.34 16.66 0 15 0C13.34 0 12 1.34 12 3C12 3.24 12.04 3.47 12.09 3.7L5.04 7.81C4.5 7.31 3.79 7 3 7C1.34 7 0 8.34 0 10C0 11.66 1.34 13 3 13C3.79 13 4.5 12.69 5.04 12.19L12.16 16.35C12.11 16.56 12.08 16.78 12.08 17C12.08 18.61 13.39 19.92 15 19.92C16.61 19.92 17.92 18.61 17.92 17C17.92 15.39 16.61 14.08 15 14.08Z"/>
-								</svg>
-							</div>
+						<% end %>
+						<div class="cursor-pointer flex flex-1 justify-center items-center py-2 space-x-2 rounded-full select-none bg-gray-300 text-gray-800 hover:bg-brand-200 hover:text-brand-600 group"
+								 data-controller="share-button"
+								 data-share-button-text="<%= strip_tags(helpers.limit_description_size(@event.description, 160)) %>"
+								 data-share-button-title="<%= @event.name %>"
+								 data-share-button-url="<%= event_url(@event, format: :html) %>"
+								 data-action="click->share-button#share">
+							<input class="absolute opacity-0" style="bottom: -30px" data-share-button-target="input" type="text" value="<%= event_url(@event, format: :html) %>">
+							<div class="font-semibold">Compartilhar</div>
+							<svg class="h-5 stroke-current text-gray-700 group-hover:text-brand-600" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8.684 13.342C8.886 12.938 9 12.482 9 12c0-.482-.114-.938-.316-1.342m0 2.684a3 3 0 110-2.684m0 2.684l6.632 3.316m-6.632-6l6.632-3.316m0 0a3 3 0 105.367-2.684 3 3 0 00-5.367 2.684zm0 9.316a3 3 0 105.368 2.684 3 3 0 00-5.368-2.684z" />
+							</svg>
 						</div>
 					</div>
-					<div class="flex p-5">
-						<div class="mr-5 bg-brand-100 flex flex-col justify-items-center px-1.5 py-1 rounded-md text-center text-xs w-content">
-							<div class="font-bold font-display text-brand-700">
-								<%= l(@event.start_time, format: "%-d") %>
-							</div>
-							<div class="font-semibold text-brand-600">
-								<%= l(@event.start_time, format: "%^b") %>
-							</div>
-						</div>
-						<div class="pr-10 my-auto text-sm text-gray-800">
-							<%= I18n.l(@event.day_of_week['date'], format: :default).capitalize %>,
-							às <%= helpers.format_hour(@event.start_time) %> horas,
-							daqui <%= helpers.distance_of_time_in_words @event.day_of_week['date'], DateTime.now %>
-						</div>
-					</div>
-					<div class="py-3 px-5 border-t border-b border-gray-100">
+					<div class="py-3 px-5">
 						<div class="text-xs font-light text-gray-400">
 							Atualizado há <%= time_ago_in_words @event&.updated_at %>
 						</div>
@@ -102,6 +93,21 @@
 							<% end %>
 						</div>
 					</div>
+					<div class="flex p-5 border-t border-b border-gray-100">
+						<div class="mr-5 bg-brand-100 flex flex-col justify-items-center px-1.5 py-1 rounded-md text-center text-xs w-content">
+							<div class="font-bold font-display text-brand-700">
+								<%= l(@event.start_time, format: "%-d") %>
+							</div>
+							<div class="font-semibold text-brand-600">
+								<%= l(@event.start_time, format: "%^b") %>
+							</div>
+						</div>
+						<div class="pr-10 my-auto text-sm text-gray-800">
+							<%= I18n.l(@event.day_of_week['date'], format: :default).capitalize %>,
+							às <%= helpers.format_hour(@event.start_time) %> horas,
+							daqui <%= helpers.distance_of_time_in_words @event.day_of_week['date'], DateTime.now %>
+						</div>
+					</div>
 					<div class="py-5 px-5 border-b border-gray-100">
 						<%= link_to place_path(@event&.place), class: 'group inline-block flex items-center space-x-2', data: { 'turbo-preserve-scroll': true } do %>
 							<%= image_tag @event&.place&.image[:sm].try { |image| image.url(public: true) },
@@ -129,19 +135,19 @@
 					</div>
 					<div class="py-5 px-5">
 						<h2 class="font-bold text-gray-800 uppercase font-display">Sobre o evento</h2>
-						<div class="mt-2 text-sm leading-relaxed text-gray-600 break-words text-with-html">
+						<div class="mt-2 leading-relaxed text-gray-600 break-words text-with-html">
 							<%= @event.description.html_safe %>
 						</div>
 					</div>
 					<% if @event&.organizers.present? %>
 						<div class="px-5 mt-6 mb-5">
 							<h2 class="font-bold text-gray-800 uppercase font-display">Organizadores</h2>
-							<div class="mt-2 space-y-2">
+							<div class="grid grid-cols-3 mt-2 space-y-2">
 								<% @event.organizers.each do |organizer| %>
 									<%= link_to organizer_path(organizer), class: 'flex font-semibold items-center space-x-3' do %>
 										<%= image_tag organizer.image[:sm].try { |image| image.url(public: true) },
 																	loading: :lazy,
-																	class:   'w-6 h-6 rounded-full shadow-sm',
+																	class:   'w-6 h-6 rounded-full shadow-sm border border-gray-100',
 																	onerror: "this.style.opacity='0'" rescue nil %>
 										<div class="text-sm">
 											<%= organizer.details_name %>
@@ -165,7 +171,7 @@
 																				url:        event_path(similar_event),
 																				'event-id': similar_event.id
 																			},
-																			class: 'font-semibold inline leading-snug mb-1 md:hover:text-brand-500 text-gray-800' do %>
+																			class: 'font-semibold inline text-sm leading-snug mb-1 md:hover:text-brand-500 text-gray-700' do %>
 												<%= similar_event.name %>
 											<% end %>
 										</div>
