Adjust style of top app bar

--- a/web/app/components/hero/swipable_component.html.erb
+++ b/web/app/components/hero/swipable_component.html.erb
@@ -7,7 +7,7 @@
 				<% if current_stage == :train %>
 					<div data-swipable-target="items">
 						<div class="mb-5">
-							<div class="font-bold font-display text-gray-900 text-xl">
+							<div class="font-bold font-display text-brand-600 text-xl">
 								Que eventos você curte?
 							</div>
 							<div class="text-xs md:text-sm text-gray-500 w-10/12 md:w-8/12">
@@ -49,7 +49,7 @@
 				<% end %>
 				<% if current_stage == :suggestions %>
 					<div class="md:mb-5">
-						<div class="font-bold font-display text-gray-900 text-xl">
+						<div class="font-bold font-display text-brand-600 text-xl">
 							Sugestões para você
 						</div>
 					</div>
