--- a/web/app/components/main_sidebar/large_event_component.html.erb
+++ b/web/app/components/main_sidebar/large_event_component.html.erb
@@ -61,7 +61,7 @@
 						<div class="text-xs font-light text-gray-400">
 							Atualizado há <%= time_ago_in_words @event&.updated_at %>
 						</div>
-						<h1 class="text-2xl font-bold text-gray-900 font-display">
+						<h1 class="text-2xl font-bold text-brand-600 font-display">
 							<%= @event.name %>
 						</h1>
 						<div class="flex items-center -ml-1">
