--- a/web/app/components/main_sidebar/group_by_day_list_component.html.erb
+++ b/web/app/components/main_sidebar/group_by_day_list_component.html.erb
@@ -6,15 +6,15 @@
 																						'top-0':      helpers.mobile_device? && current_page?('/minha-agenda'),
 																						'top-16':     !helpers.mobile_device? && (controller_name == 'feeds') }) %>">
 				<div class="">
-					<div class="text-sm text-brand-500">
+					<div class="text-xs">
 						<%= l(group[0]&.to_date, format: "%d/%m") %>
 						<% if group[0].to_date > Date.today + 6 %>
 							&nbsp;<%= "· daqui #{distance_of_time_in_words(group[0]&.to_date, DateTime.now)}" %>
 						<% end %>
 					</div>
 					<div class="space-x-2 flex select-none">
-						<h2 class="font-bold text-brand-600 uppercase flex items-center">
-							<%= link_to day_events_path(day: group[0].to_date.strftime("%d-%m-%Y")), class: 'font-display text-md', data: { 'turbo-preserve-scroll': true } do %>
+						<h2 class="border-b flex items-center text-gray-800 uppercase">
+							<%= link_to day_events_path(day: group[0].to_date.strftime("%d-%m-%Y")), class: 'font-display text-sm', data: { 'turbo-preserve-scroll': true } do %>
 								<% if group[0].to_date.today? %>
 									Hoje, <%= I18n.l(group[0]&.to_date, format: :week).titlecase %>
 								<% elsif group[0].to_date == Date.tomorrow %>
