--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -46,7 +46,7 @@
 			<% unless params[:day] || params[:category] %>
 				<div id="hero__presentation" data-turbo-permanent class="flex flex-row-reverse gap-4 items-start mb-12 md:flex md:flex-row md:mb-5 md:mx-0 md:px-5 mx-5 pt-5 select-none tap-highlight-none" style="min-height: <%= mobile_device? ? '150px' : '225px' %>">
 					<div class="my-auto">
-						<h2 class="font-bold font-display text-brand-600 md:text-xl">
+						<h2 class="font-bold font-display text-brand-600 text-xl">
 							Aproveite Porto Alegre
 						</h2>
 						<span class="inline-block leading-snug mt-2 text-gray-500 text-sm md:text-base">
