--- a/web/app/components/hero/horizontal_event_component.html.erb
+++ b/web/app/components/hero/horizontal_event_component.html.erb
@@ -1,6 +1,10 @@
-<%= content_tag :div, id: dom_id(@event, :hero), class: 'transition-opacity duration-300', data: { controller: 'hero--horizontal-event', 'hero--horizontal-event-open-in-sidebar': @open_in_sidebar } do %>
-	<div class="bg-white flex justify-between mt-2 md:pr-5 py-3 rounded-lg select-none tap-highlight-none">
-		<div class="pr-6 flex-1">
+<%= content_tag :div, id: dom_id(@event, :hero), class: helpers.class_names('mt-10 transition-opacity duration-300'), data: { controller: 'hero--horizontal-event', 'hero--horizontal-event-open-in-sidebar': @open_in_sidebar, 'flip-key': dom_id(@event, :hero) } do %>
+	<div data-hero--horizontal-event-target="shadowItem" class="overflow-hidden absolute top-0 right-0 top-3 -right-3 w-32 h-20 rounded-lg opacity-0 transition-all duration-500 transform bg-brand-200 md:h-28 md:w-48 ripple ripple-white">
+
+	</div>
+	<div data-hero--horizontal-event-target="currentItem"
+			 class="flex justify-between transition-opacity select-none tap-highlight-none">
+		<div class="<%= helpers.class_names('pr-6 flex-1 -mt-5', {}) %>">
 			<%= content_tag :a,
 											dom_id(@event, 'hero--horizontal-event__link'),
 											href:  event_path(@event),
@@ -11,13 +15,16 @@
 											class: 'font-semibold md:text-lg inline-block leading-snug md:hover:underline text-gray-700' do %>
 				<%= @event.name %>
 			<% end %>
-			<div class="text-sm mt-2 text-gray-500">
-				<%= helpers.day_of_week(@event.start_time).titlecase %> · <%= helpers.format_hour @event.start_time %>h ·
+			<div class="mt-2 text-sm text-gray-500">
+				<%= helpers.day_of_week(@event.start_time) %> · <%= helpers.format_hour @event.start_time %>h ·
 				<%= @event.categories_primary_name.titleize %> ·
 				<%= link_to helpers.limit_place_name_size(@event.place_details_name, 24), place_path(@event.place), class: 'md:hover:underline capitalize' %>
 			</div>
+			<div class="mt-2 text-sm text-gray-500">
+				<%= helpers.limit_description_size @event.description %>
+			</div>
 			<div class="flex mt-1 mt-2 space-x-2">
-				<%= content_tag :div, data: { action: 'click->hero--horizontal-event#like', 'event-id': @event.id }, class: 'cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:text-gray-600 items-center justify-center rounded-full select-none tap-highlight-none text-gray-600 text-sm transform transition-transform' do %>
+				<%= content_tag :div, data: { action: 'click->hero--horizontal-event#like', 'event-id': @event.id }, class: 'cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:text-gray-600 items-center justify-center rounded-full select-none tap-highlight-none text-gray-600 text-sm' do %>
 					<svg class="<%= helpers.class_names 'group h-5 w-5 stroke-current',
 																							{ 'text-gray-500 group-hover:text-brand-600': !@user&.like?(@event),
 																								'text-brand-600':                           @user&.like?(@event) } %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -28,7 +35,7 @@
 						Curtir
 					</span>
 				<% end %>
-				<%= content_tag :div, data: { action: 'click->hero--horizontal-event#dislike', 'event-id': @event.id }, class: 'cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:text-gray-600 items-center justify-center rounded-full select-none tap-highlight-none text-sm transform transition-transform' do %>
+				<%= content_tag :div, data: { action: 'click->hero--horizontal-event#dislike', 'event-id': @event.id }, class: 'cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:text-gray-600 items-center justify-center rounded-full select-none tap-highlight-none text-sm' do %>
 					<svg class="<%= helpers.class_names 'h-5 w-5 stroke-current',
 																							{ 'text-gray-500 hover:text-gray-600': !@user&.dislike?(@event),
 																								'text-red-500':                      @user&.dislike?(@event) } %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -38,7 +45,10 @@
 			</div>
 		</div>
 		<div>
-			<div data-controller="ripple" class="h-20 md:h-28 md:w-48 overflow-hidden relative ripple ripple-white rounded-lg shadow w-32">
+			<div data-controller="ripple"
+					 style="background-color: <%= @event.image_dominant_color %>"
+					 class="<%= helpers.class_names('h-20 md:h-28 md:w-48 overflow-hidden relative ripple ripple-white rounded-lg w-32 shadow',
+																					{}) %>">
 				<%= link_to event_path(@event),
 										id:   dom_id(@event, 'hero--horizontal-event__image'),
 										data: {
@@ -46,7 +56,6 @@
 											'event-id': @event.id
 										} do %>
 					<%= image_tag helpers.shrine_image_url(@event, :feed), {
-						loading: :lazy,
 						class:   'cursor-pointer h-full object-center object-cover w-full overflow-hidden',
 						onerror: "this.style.opacity='0'"
 					} rescue nil %>
