--- a/web/app/components/main_sidebar/group_by_day_list_component.html.erb
+++ b/web/app/components/main_sidebar/group_by_day_list_component.html.erb
@@ -13,7 +13,7 @@
 						<% end %>
 					</div>
 					<div class="space-x-2 flex select-none">
-						<h2 class="border-b flex items-center text-gray-800 uppercase">
+						<h2 class="flex items-center text-gray-800 uppercase">
 							<%= link_to day_events_path(day: group[0].to_date.strftime("%d-%m-%Y")), class: 'font-display text-sm', data: { 'turbo-preserve-scroll': true } do %>
 								<% if group[0].to_date.today? %>
 									Hoje, <%= I18n.l(group[0]&.to_date, format: :week).titlecase %>
