--- a/web/app/components/main_sidebar/horizontal_event_component.html.erb
+++ b/web/app/components/main_sidebar/horizontal_event_component.html.erb
@@ -20,7 +20,7 @@
 						onerror: "this.style.opacity='0'"
 					} rescue nil %>
 				<% end %>
-				<% if @event.created_at > (DateTime.now - 24.hours) %>
+				<% if helpers.is_new_event? @event %>
 					<div title="Criado nas últimas 24 horas" class="-bottom-2 absolute bg-brand-500 font-semibold left-3 px-1 rounded text-white text-xs">NOVO</div>
 				<% end %>
 			</div>
