Add virtualPageview GA event when open horizontal events

--- a/web/app/views/layouts/_google_analytics.html.erb
+++ b/web/app/views/layouts/_google_analytics.html.erb
@@ -1,4 +1,4 @@
-<% return if Rails.env.development? || (Rails.env.production? && current_user.try(:admin?)) %>
+<% return if (Rails.env.production? && current_user.try(:admin?)) %>
 
 <!-- Google Analytics -->
 <script>
