--- a/web/app/views/search/index.html.erb
+++ b/web/app/views/search/index.html.erb
@@ -1,22 +1,34 @@
 <%= render Modal::SignInComponent.new(text: 'Crie uma conta para salvar eventos favoritos e receber recomendações únicas') %>
 
-<div id="main-content" class="md:grid md:grid-cols-12 max-w-screen-xl mx-auto">
-	<% unless mobile_device? %>
-		<section class="hidden md:inline-block md:col-span-3 md:bg-white sticky w-72"
-						 id="left-sidebar"
-						 data-controller="simple-scrollbar"
-						 style="height: calc(100vh - 64px); top: 64px">
-			<%= render LeftSidebar::CalendarComponent.new(events: @liked_events, start_date: Date.today, user: current_user, filter: false, indicators: @indicators) %>
-		</section>
-	<% end %>
-	<section id="main-sidebar" class="col-span-12 md:col-span-5">
+<div data-controller="loader"
+		 data-loader-on-loading="horizontal-event#open-event:before"
+		 data-loader-on-loaded="horizontal-event#open-event:success"
+		 class="sticky top-20 z-10 z-50 px-5 mx-auto">
+	<div id="open-event"
+			 data-loader-target="loaded">
+		<%= render MainSidebar::LargeEventComponent.new(user: current_user, event: nil) %>
+	</div>
+	<div
+		class="flex hidden overscroll-contain fixed top-0 left-0 justify-center items-center w-screen h-screen text-3xl text-gray-800 rounded-xl shadow-lg font-display"
+		data-loader-target="loading"
+		style="background: #abacbfeb">
+		Carregando
+		<svg data-loader-target="onIcon" class="ml-2 w-5 h-5 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+			<path fill="none" d="M0 0h24v24H0V0z"/>
+			<path d="M17.65 6.35c-1.63-1.63-3.94-2.57-6.48-2.31-3.67.37-6.69 3.35-7.1 7.02C3.52 15.91 7.27 20 12 20c3.19 0 5.93-1.87 7.21-4.56.32-.67-.16-1.44-.9-1.44-.37 0-.72.2-.88.53-1.13 2.43-3.84 3.97-6.8 3.31-2.22-.49-4.01-2.3-4.48-4.52C5.31 9.44 8.26 6 12 6c1.66 0 3.14.69 4.22 1.78l-1.51 1.51c-.63.63-.19 1.71.7 1.71H19c.55 0 1-.45 1-1V6.41c0-.89-1.08-1.34-1.71-.71l-.64.65z"/>
+		</svg>
+	</div>
+</div>
+
+<div id="main-content" class="gap-16 mx-auto max-w-screen-lg md:grid md:grid-cols-8">
+	<section id="main-sidebar" class="col-span-8 md:col-span-5">
 		<%= notice %>
 		<% if (@search_result&.suggestions.present? rescue false) %>
-			<div class="mb-10 md:px-10 mx-auto px-5">
+			<div class="mx-auto mb-10">
 				<h2 class="font-semibold text-gray-800">Você quis dizer?</h2>
 				<% @search_result&.suggestions&.each do |suggestion| %>
 					<a href="<%= search_index_path({ q: suggestion }) %>" class="me-chip mdc-chip">
-						<span class="border inline-block mr-2 mt-2 px-4 py-2 rounded-full text-gray-800 text-sm hover:bg-gray-100">
+						<span class="inline-block py-2 mt-2 mr-2 text-sm text-gray-800 rounded-full border hover:bg-gray-100">
 							<%= suggestion %>
 						</span>
 					</a>
@@ -24,20 +36,29 @@
 			</div>
 		<% end %>
 		<div class="mx-auto mb-24 space-y-2 is-animated sm:container">
+			<%= link_to root_path, class: 'inline-block mt-12 px-5' do %>
+				<div class="flex py-3 px-5 space-x-3 rounded-full border border-brand-300 hover:bg-brand-200 hover:border-brand-200 text-brand-600 w-content">
+					<svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18" />
+					</svg>
+					<div>Ver todos os eventos em <span class="font-bold">Porto Alegre</span></div>
+				</div>
+			<% end %>
 			<% if @search_result.try { |events| events.size > 0 } %>
-				<div class="font-bold font-display md:px-10 md:text-3xl px-5 py-3 text-gray-900 text-xl">
-					Eventos encontrados para: <%= params[:q] %>
+				<div class="py-3 px-5 text-2xl font-bold text-gray-800 font-display">
+					<%= @founded_events&.size %> eventos encontrados para: <span class="text-brand-600"><%= params[:q] %></span>
 				</div>
 				<%= render MainSidebar::GroupByDayListComponent.new(events: @founded_events, user: current_user, open_in_sidebar: true) %>
 			<% else %>
 				<% if params[:q] %>
-					<h2 class="text-md m-5">Nenhum evento encontrado. <%= link_to 'Veja todos os eventos', root_path, class: 'text-brand-500' %>.</h2>
+					<h2 class="m-5 text-md">Nenhum evento
+						encontrado. <%= link_to 'Veja todos os eventos', root_path, class: 'text-brand-500' %>.</h2>
 				<% end %>
 				<% if @categories.present? %>
 					<div class="mx-auto">
-						<div class="grid grid-cols-2 gap-3 px-5 mt-5 md:px-0">
+						<div class="grid grid-cols-2 gap-3 mt-5 md:px-0">
 							<% @categories.each do |category| %>
-								<a href="<%= category_events_path category %>" class="antialiased bg-white cursor-pointer duration-200 flex h-20 inline-block justify-start px-4 py-1 rounded select-none tap-highlight-none transform transition-colors w-full text-gray-500 border">
+								<a href="<%= category_events_path category %>" class="inline-block flex justify-start py-1 px-4 w-full h-20 antialiased text-gray-500 bg-white rounded border transition-colors duration-200 transform cursor-pointer select-none tap-highlight-none">
 									<div class="text-lg font-semibold">
 										<%= category %>
 									</div>
@@ -50,25 +71,9 @@
 		</div>
 	</section>
 	<% unless mobile_device? %>
-		<section id="right-sidebar" class="hidden md:inline-block md:bg-white md:h-full md:col-span-4 will-change">
-			<div data-controller="loader"
-					 data-loader-on-loading="horizontal-event#open-event:before"
-					 data-loader-on-loaded="horizontal-event#open-event:success"
-					 class="px-5 sticky top-24 z-10">
-				<div id="open-event"
-						 data-loader-target="loaded">
-					<%= render MainSidebar::LargeEventComponent.new(user: current_user, event: nil) %>
-				</div>
-				<div
-					class="flex items-center justify-center hidden h-16 mt-5 bg-white border border-gray-100 shadow-lg h-screen-8/10 rounded-xl text-md"
-					data-loader-target="loading">
-					Carregando
-					<svg data-loader-target="onIcon" class="w-5 h-5 ml-2 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-						<path fill="none" d="M0 0h24v24H0V0z"/>
-						<path d="M17.65 6.35c-1.63-1.63-3.94-2.57-6.48-2.31-3.67.37-6.69 3.35-7.1 7.02C3.52 15.91 7.27 20 12 20c3.19 0 5.93-1.87 7.21-4.56.32-.67-.16-1.44-.9-1.44-.37 0-.72.2-.88.53-1.13 2.43-3.84 3.97-6.8 3.31-2.22-.49-4.01-2.3-4.48-4.52C5.31 9.44 8.26 6 12 6c1.66 0 3.14.69 4.22 1.78l-1.51 1.51c-.63.63-.19 1.71.7 1.71H19c.55 0 1-.45 1-1V6.41c0-.89-1.08-1.34-1.71-.71l-.64.65z"/>
-					</svg>
-				</div>
-			</div>
+		<section class="hidden md:inline-block md:col-span-3 md:bg-white"
+						 id="left-sidebar">
+			<%= render LeftSidebar::CalendarComponent.new(events: @liked_events, start_date: Date.today, user: current_user, filter: false, indicators: @indicators) %>
 		</section>
 	<% end %>
 </div>
