--- a/web/app/views/layouts/_footer.html.erb
+++ b/web/app/views/layouts/_footer.html.erb
@@ -1,10 +1,8 @@
 <section class="antialiased bg-gray-50 flex flex-col font-light md:px-0 md:text-base mt-10 md:mt-5 px-5 py-6 space-y-1 text-center text-gray-600 text-sm w-full pb-24 md:pb-6 <%= "me-footer--#{params[:controller]}" if params[:controller] %>">
 
-	<%# if action_name == 'show' %>
-<!--		<a href='https://play.google.com/store/apps/details?id=com.alegreme.app&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>-->
-<!--			<img class="mx-auto" style="width: 200px" alt='Disponível no Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/pt-br_badge_web_generic.png'/>-->
-<!--		</a>-->
-	<%# end %>
+	<a class="inline-block mx-auto w-content" href='https://play.google.com/store/apps/details?id=com.alegreme.app&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
+		<img alt='Disponível no Google Play' width="200" src='https://play.google.com/intl/en_us/badges/static/images/badges/pt-br_badge_web_generic.png'/>
+	</a>
 
 
 	<div class="font-semibold text-brand-600">
@@ -26,7 +24,8 @@
 		<a class="md:hover:text-brand-500 transition-colors duration-150" href="http://medium.com/@jonataseduardo/potencializando-a-intera%C3%A7%C3%A3o-entre-as-pessoas-para-criarmos-cidades-melhores-5d048bc9c" rel="nofollow" target="_blank">
 			Sobre ·
 		</a>
-		<a rel="nofollow" class="md:hover:text-brand-500 transition-colors duration-150" href="/privacy">Política de privacidade</a> ·
+		<a rel="nofollow" class="md:hover:text-brand-500 transition-colors duration-150" href="/privacy">Política de
+			privacidade</a> ·
 		<a rel="nofollow" class="md:hover:text-brand-500 transition-colors duration-150" href="/terms">Termos de serviço</a>
 	</div>
 </section>
